--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub2.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub2.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.8.0.final utlizzo versione della libreria JasperReports6.8.0-2ed8dfabb690ff337a5797129f2cd92902b0c87b  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="m_inout_sub1" pageWidth="550" pageHeight="810" whenNoDataType="NoDataSection" columnWidth="550" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="c33fbd9b-fd01-4855-baf8-57a853bc8344">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="m_inout_sub1" pageWidth="555" pageHeight="810" whenNoDataType="NoDataSection" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="c33fbd9b-fd01-4855-baf8-57a853bc8344">
 	<property name="ireport.zoom" value="1.6934217901613329"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -11,15 +11,6 @@
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w2" value="657"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="id prod"/>
 	<property name="com.jaspersoft.studio.report.description" value=""/>
-	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
@@ -266,7 +257,7 @@ ORDER BY m_inoutline_line ASC]]>
 				<text><![CDATA[COLLI]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="476" y="0" width="74" height="12" backcolor="#E5FF91" uuid="1651e106-1590-4d7b-88fc-f068ab36d2ce">
+				<reportElement mode="Opaque" x="476" y="0" width="79" height="12" backcolor="#E5FF91" uuid="1651e106-1590-4d7b-88fc-f068ab36d2ce">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a93aa641-21a3-457a-a04f-cc7fae8a5afe"/>
 				</reportElement>
 				<box>
@@ -361,7 +352,7 @@ ORDER BY m_inoutline_line ASC]]>
 				<textFieldExpression><![CDATA[$F{c_orderline_qtyentered}]]></textFieldExpression>
 			</textField>
 			<textField pattern="¤#,##0.0000;¤-#,##0.0000">
-				<reportElement x="476" y="0" width="74" height="13" uuid="a25c3e83-def8-4eeb-bfdc-e0f92efcc457">
+				<reportElement x="476" y="0" width="79" height="13" uuid="a25c3e83-def8-4eeb-bfdc-e0f92efcc457">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a93aa641-21a3-457a-a04f-cc7fae8a5afe"/>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
@@ -416,9 +407,7 @@ ORDER BY m_inoutline_line ASC]]>
 		</band>
 		<band height="3">
 			<line>
-				<reportElement x="0" y="2" width="550" height="1" uuid="2712c883-12fa-4516-9c10-a2c974c9d99d">
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-				</reportElement>
+				<reportElement x="0" y="2" width="555" height="1" uuid="2712c883-12fa-4516-9c10-a2c974c9d99d"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
